--- a/software.html
+++ b/software.html
@@ -39,23 +39,43 @@
   
     <div class="container">
 <!--Begin body here --> 
-<h5><a href='https://rakuten.referrals.selectminds.com/jobs/software-engineer-fraud-prevention-section-esd-10059'>Software Engineer (Fraud Prevention Section) : ESD - Rakuten Careers</a></h5> 
+<h5><a href='https://boards.greenhouse.io/credible/jobs/1941699'>Job Application for Senior Software Engineer at Credible</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-11-01</p>
 <hr/>
-<h5><a href='https://rakuten.referrals.selectminds.com/jobs/software-engineer-test-automation-messaging-group-dsaid-10060'>Software Engineer - Test Automation (Messaging Group) : DSAID - Rakuten Careers</a></h5> 
+<h5><a href='https://boards.greenhouse.io/credible/jobs/1942074'>Job Application for Senior Software Engineer at Credible</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-11-01</p>
 <hr/>
-<h5><a href='https://rakuten.referrals.selectminds.com/jobs/senior-software-engineer-architect-rakuten-private-cloud-cpd-10061'>Senior Software Engineer / Architect (Rakuten Private Cloud) : CPD - Rakuten Careers</a></h5> 
-<p><span class="badge badge-light"></span></p>
+<h5><a href='https://boards.greenhouse.io/dominodatalab/jobs/1939775'>Job Application for Senior Front End Software Engineer at Domino Data Lab</a></h5> 
+<p><span class="badge badge-light">San Francisco</span></p>
 <p>Posted on: 2019-11-01</p>
 <hr/>
-<h5><a href='http://jobs.jobvite.com/careers/service/redirect?c=qS09VfwG&k=Job&j=ol59afwt&__jvst=Employee+Referral&__jvsd=snfTCgwS&__jvsc=Twitter&bid=nx5YqMwh'>Palo Alto Networks Careers - Senior Software Engineer (DevOps)</a></h5> 
+<h5><a href='http://jobs.jobvite.com/careers/service/redirect?c=qPDaVfwh&k=Job&j=oAQsbfwN&__jvst=Employee+Referral&__jvsd=sXftHhw8&__jvsc=Twitter&bid=nTQYqMwo'> Silicon Labs Careers - Embedded Software Engineer</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on:: 2019-11-01</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='http://threatstack.applytojob.com/apply/JD6jHaOdqU/Software-Engineer-Agent'>Software Engineer - Agent - Threat Stack - Career Page</a></h5> 
+<h5><a href='http://jobs.jobvite.com/careers/service/redirect?c=qoZ9Vfwb&k=Job&j=oAH89fwi&__jvst=Employee+Referral&__jvsd=seBixgwp&__jvsc=Twitter&bid=nwHYqMwS'>Imperva Careers - Senior Software Engineer, Full Stack</a></h5> 
+<p><span class="badge badge-light">Los Angeles, California  Redwood City, California  Los Angeles</span></p>
+<p>Posted on:: 2019-11-01</p>
+<hr/>
+<h5><a href='https://rakuten.referrals.selectminds.com/jobs/software-engineer-fraud-prevention-section-esd-10059'>Software Engineer (Fraud Prevention Section) : ESD - Rakuten Careers</a></h5> 
+<p><span class="badge badge-light">Tokyo Tokyo Tokyo, Japan</span></p>
+<p>Posted on: 2019-11-01</p>
+<hr/>
+<h5><a href='https://rakuten.referrals.selectminds.com/jobs/software-engineer-test-automation-messaging-group-dsaid-10060'>Software Engineer - Test Automation (Messaging Group) : DSAID - Rakuten Careers</a></h5> 
+<p><span class="badge badge-light">Tokyo Tokyo Tokyo, Japan</span></p>
+<p>Posted on: 2019-11-01</p>
+<hr/>
+<h5><a href='https://rakuten.referrals.selectminds.com/jobs/senior-software-engineer-architect-rakuten-private-cloud-cpd-10061'>Senior Software Engineer / Architect (Rakuten Private Cloud) : CPD - Rakuten Careers</a></h5> 
+<p><span class="badge badge-light">Tokyo Tokyo Tokyo, Japan</span></p>
+<p>Posted on: 2019-11-01</p>
+<hr/>
+<h5><a href='http://jobs.jobvite.com/careers/service/redirect?c=qS09VfwG&k=Job&j=ol59afwt&__jvst=Employee+Referral&__jvsd=snfTCgwS&__jvsc=Twitter&bid=nx5YqMwh'>Palo Alto Networks Careers - Senior Software Engineer (DevOps)</a></h5> 
+<p><span class="badge badge-light">Palo Alto Palo Alto Santa Clara, California  Palo Alto</span></p>
+<p>Posted on:: 2019-11-01</p>
+<hr/>
+<h5><a href='http://threatstack.applytojob.com/apply/JD6jHaOdqU/Software-Engineer-Agent'>Software Engineer - Agent - Threat Stack - Career Page</a></h5> 
 <p><span class="badge badge-light">Boston, MA</span></p>
 <p>Posted on: 2019-11-01</p>
 <hr/>
@@ -131,7 +151,7 @@
 <p><span class="badge badge-light">Plantation, FL</span></p>
 <p>Posted on: 2019-11-01</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.smartrecruiters.com/LaunchCode/743999698671376-junior-software-developer'>LaunchCode Junior Software Developer | SmartRecruiters</a></h5> 
+<h5><a href='https://jobs.smartrecruiters.com/LaunchCode/743999698671376-junior-software-developer'>LaunchCode Junior Software Developer | SmartRecruiters</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-11-01</p>
 <hr/>
@@ -151,7 +171,7 @@
 <p><span class="badge badge-light"></span></p>
 <p>Posted on:: 2019-11-01</p>
 <hr/>
-<h5><a href='https://devjobs.at/job/75484254335'>Java Software Developer - devjobs.at</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://devjobs.at/job/75484254335'>Java Software Developer - devjobs.at</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on:: 2019-11-01</p>
 <hr/>
@@ -163,7 +183,7 @@
 <p><span class="badge badge-light">Denver, Colorado</span></p>
 <p>Posted on:: 2019-11-01</p>
 <hr/>
-<h5><a href='https://boards.greenhouse.io/util/jobs/4434918002'>Job Application for Senior Software Engineer at Util</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://boards.greenhouse.io/util/jobs/4434918002'>Job Application for Senior Software Engineer at Util</a></h5> 
 <p><span class="badge badge-light">London</span></p>
 <p>Posted on: 2019-11-01</p>
 <hr/>
@@ -261,11 +281,11 @@
 <p><span class="badge badge-light">Broomfield, CO</span></p>
 <p>Posted on: 2019-11-01</p>
 <hr/>
-<h5><a href='https://jobs.smartrecruiters.com/IBIGroup/743999698651649-software-developer-junior-'>IBI Group Software Developer (Junior) | SmartRecruiters</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.smartrecruiters.com/IBIGroup/743999698651649-software-developer-junior-'>IBI Group Software Developer (Junior) | SmartRecruiters</a></h5> 
 <p><span class="badge badge-light">Pompano Beach, FL</span></p>
 <p>Posted on: 2019-11-01</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.smartrecruiters.com/IBIGroup/743999698649947-junior-software-developer'>IBI Group Junior Software Developer | SmartRecruiters</a></h5> 
+<h5><a href='https://jobs.smartrecruiters.com/IBIGroup/743999698649947-junior-software-developer'>IBI Group Junior Software Developer | SmartRecruiters</a></h5> 
 <p><span class="badge badge-light">Toronto, ON Canada</span></p>
 <p>Posted on: 2019-11-01</p>
 <hr/>
@@ -277,11 +297,11 @@
 <p><span class="badge badge-light">Canada Canada Ottawa, Ontario</span></p>
 <p>Posted on: 2019-11-01</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='http://jobs.jobvite.com/workiva/job/ooUrbfwE'>Workiva Inc. Careers - Software Engineer</a></h5> 
+<h5><a href='http://jobs.jobvite.com/workiva/job/ooUrbfwE'>Workiva Inc. Careers - Software Engineer</a></h5> 
 <p><span class="badge badge-light">Denver, Colorado</span></p>
 <p>Posted on: 2019-11-01</p>
 <hr/>
-<h5><a href='http://jobs.jobvite.com/workiva/job/oxUrbfwN'>Workiva Inc. Careers - Senior Software Engineer</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='http://jobs.jobvite.com/workiva/job/oxUrbfwN'>Workiva Inc. Careers - Senior Software Engineer</a></h5> 
 <p><span class="badge badge-light">Denver, Colorado</span></p>
 <p>Posted on: 2019-11-01</p>
 <hr/>
@@ -297,11 +317,11 @@
 <p><span class="badge badge-light">Culver City, CA</span></p>
 <p>Posted on: 2019-11-01</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://boards.greenhouse.io/medmen/jobs/4500557002'>Job Application for Senior Software Engineer at MedMen</a></h5> 
+<h5><a href='https://boards.greenhouse.io/medmen/jobs/4500557002'>Job Application for Senior Software Engineer at MedMen</a></h5> 
 <p><span class="badge badge-light">Culver City, CA</span></p>
 <p>Posted on: 2019-11-01</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.smartrecruiters.com/BoschGroup/743999698645158-software-developer'>Bosch Group Software Developer | SmartRecruiters</a></h5> 
+<h5><a href='https://jobs.smartrecruiters.com/BoschGroup/743999698645158-software-developer'>Bosch Group Software Developer | SmartRecruiters</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-11-01</p>
 <hr/>
@@ -413,33 +433,13 @@
 <p><span class="badge badge-light">Paris, France  Paris  Paris</span></p>
 <p>Posted on: 2019-11-01</p>
 <hr/>
-<h5><a href='https://jobs.lever.co/bigbear/728ab72d-676d-44fd-884d-c66ccff505f9'>BigBear - Software Engineer</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.lever.co/bigbear/728ab72d-676d-44fd-884d-c66ccff505f9'>BigBear - Software Engineer</a></h5> 
 <p><span class="badge badge-light">San Diego</span></p>
 <p>Posted on: 2019-11-01</p>
 <hr/>
 <h5><a href='https://slack.com/intl/en-in/careers/1806534/sr-software-engineer-android'>Sr. Software Engineer, Android | Careers | Slack</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on:: 2019-11-01</p>
-<hr/>
-<h5><a href='http://jobs.jobvite.com/careers/service/redirect?c=qB09Vfwp&k=Job&j=o7sXafwq&__jvst=Employee+Referral&__jvsd=sNYIIhwX&__jvsc=Twitter&bid=nBRnqMww'>NICE inContact Careers - Sr. Software Engineer (AWS, Java)</a></h5> 
-<p><span class="badge badge-light">Salt Lake City, Utah  Salt Lake City, UT</span></p>
-<p>Posted on:: 2019-11-01</p>
-<hr/>
-<h5><a href='https://jobs.lever.co/vgs/679dbff8-cfe1-42a2-b884-0dd4ef2dade9'>Very Good Security - Middle Software Engineer (Vault)</a></h5> 
-<p><span class="badge badge-light"></span></p>
-<p>Posted on: 2019-11-01</p>
-<hr/>
-<h5><a href='https://boards.greenhouse.io/wellist/jobs/4503452002'>Job Application for Sr. Software Engineer at Wellist</a></h5> 
-<p><span class="badge badge-light">Boston</span></p>
-<p>Posted on: 2019-11-01</p>
-<hr/>
-<h5><a href='http://jobs.jobvite.com/careers/service/redirect?c=q919VfwY&k=Job&j=orQ79fwh&__jvst=Employee&__jvsd=su86Ggw9&__jvsc=Twitter&bid=n1nmqMwr'>Quotient Technology Inc. Careers - Senior Software Engineer</a></h5> 
-<p><span class="badge badge-light">Mountain View, California</span></p>
-<p>Posted on:: 2019-11-01</p>
-<hr/>
-<h5><a href='https://boards.greenhouse.io/agoda/jobs/1937117'>Job Application for Senior Software Engineer - Big Data/Machine Learning at Agoda</a></h5> 
-<p><span class="badge badge-light">Singapore  Singapore  Singapore</span></p>
-<p>Posted on: 2019-11-01</p>
 <hr/>
 
 
